# open-ai-sdk

./: .gitignore  README.md  pyproject.toml
src/testprj/: __init__.py  agent-ops.py  agentAsTool.py  chainlit_app.py  context.py  dynamic-instruction.py  guardrails.py  handOff.py  hooks.py  output-guardrails.py  simpleAgent.py  streaming.py  toolCalling.py  toolSetting.py
src/testprj/dynamic-tool-call/: dynamic-tool-call.py  max-turn.py  tool-call-choices.py  tool-call-control.py
src/testprj/examples/: agent_session.py
src/testprj/examples/agent_patterns/: agent_routing.py  agents_as_tools.py  deterministic.py  forcing_tool_use.py  input_guardrails.py  llm_as_a_judge.py  output_guardrails.py  parallelization_agent.py
src/testprj/practices/: agent-ops.py  chainlit_app.py  context.py  dynamic-instruction.py  input-guardrails.py  simpleAgent.py
